<resources>
    <string name="app_name">UCDine</string>
    <string name="findertitle">Recipe Finder</string>
    <string name="recipepitch">Looking for a certain recipe, or not sure what to make? Use our recipe finder!</string>
    <string name="finderbutton">Find my recipe!</string>
    <string name="dishname">Enter dish name</string>
    <string name="event_list">Event List!</string>
    <string name="enter_username">Enter username</string>
    <string name="add">Add</string>
    <!--create event -->
    <string name="event_title">Event name</string>
    <string name="location">Enter location</string>
    <string name="date">Date</string>
    <string name="hour">Time</string>
    <string name="people">How many people?</string>
    <string name="description">Describe your event</string>
    <string name="calendarbutton">Add to Calendar</string>
    <string name="formbutton">Submit</string>
    <string name="emptyString"></string>


    <!--***PROFILE ACTIVITY / EDIT PROFILE ACTIVITY***-->
    <string name="profile">Profile</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_edit">UPDATE</string>
    <string name="user_name">User Name</string>
    <string name="user_email">EMAIL: %1$s</string>
    <string name="user_course">COURSE: %1$s</string>
    <string name="user_bio">About Me</string>
    <string name="user_points">POINTS: %1$s</string>
    <string name="user_events">EVENTS: %1$s</string>
    <string name="user_past_events">PAST EVENTS: %1$s</string>
    <string name="user_future_events">FUTURE EVENTS: %1$s</string>
    <string name="user_rating">RATING: %1$s</string>
    <string name="user_location_desc">This is the location the user has set for their Hosting</string>
    <string name="take_picture">Take Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_me">ABOUT ME:\nLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt.</string>
    <string name="edit">EDIT</string>
    <string name="edit_pic">Change Photo</string>
    <string name="set_loci">Set Locations</string>
    <string name="email_label">eMail</string>
    <string name="course_label">Course</string>

    <string name="my_activity">Here\'s how you\'ve been getting on...</string>
    <string name="activities">My Activities</string>
    <string name="events">My Events</string>
    <string name="reviews">My Reviews</string>
    <string name="hosted">Host</string>
    <string name="attended">Guest</string>

    <string name="search_event">Search Events</string>
    <string name="create_event">Create Events</string>
    <string name="attend_event">Attend Event</string>
    <string name="host_event">Host Event</string>
    <string name="search_recipe">Search Recipes</string>

    <string name="welcome1">Hey </string>
    <string name="welcome2">, it\'s good to see you!</string>
    <string name="welcome3">Hey %1$s,\nIt\'s good to see you!</string>



    <string name="event_details">Upcoming Events:</string>
    <string name="cancel_event">CANCEL</string>

    <string name="review_text_1">Thanks so much for the amazing curry night last month! Hope you\'ll come to my murder mystery dinner party next week! ;)</string>
    <string name="review_text_2">I NEED your pasta bake recipe - I\'ve been dreaming about it since Thursday night. Please host again soon!</string>
    <string name="review_text_3">Hey, it was lovely meeting you the other night! Well done on such a great event, and thanks for having us!</string>

</resources>
