<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ap_main_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <ScrollView
        android:id="@+id/ap_main_scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <!--Lin Layout for All Information-->
        <LinearLayout
            android:id="@+id/ap_overall_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--&lt;!&ndash;******** WELCOME NOTES ***********&ndash;&gt;-->

            <!--&lt;!&ndash;&lt;!&ndash;Lin Layout for Welcome Notes&ndash;&gt;&ndash;&gt;-->
            <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:layout_marginStart="10dp"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginEnd="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:layout_height="100dp"-->
            <!--android:weightSum="3">-->

            <!--<TextView-->
            <!--android:id="@+id/ap_welcome_note"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="2"-->
            <!--style="@style/welcomeNoteText"-->
            <!--android:text=""/>-->

            <!--<TextView-->
            <!--android:id="@+id/ap_activities"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"-->
            <!--style="@style/welcomeNoteSubText"-->
            <!--android:text="@string/my_activity"/>-->
            <!--&lt;!&ndash;End Layout for Welcome Notes&ndash;&gt;-->
            <!--</LinearLayout>-->

            <!--android:textStyle="normal"-->

            <!--Lin Layout for All Profile Information-->
            <LinearLayout
                android:id="@+id/ap_overall_profile_layout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_profile">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:background="@color/colorPrimaryDark">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:src="@drawable/profile_icon"
                        android:paddingLeft="40dp"
                        style="@style/icon_margins"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/profile"
                        style="@style/sectionHeaderText"
                        android:textAllCaps="true" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:paddingRight="40dp"
                        android:src="@drawable/profile_edit_icon2"
                        style="@style/icon_margins"/>
                </LinearLayout>

                <!--Lin Layout for Profile Information Row 1-->
                <LinearLayout
                    android:id="@+id/ap_profile_layout_row1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:weightSum="5">

                    <!--Lin Layout for Prof Pic & Edit Button-->
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"
                        android:weightSum="3">

                        <ImageView
                            android:id="@+id/ap_profile_image"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:layout_gravity = "center_horizontal"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:padding="5dp"
                            android:cropToPadding="true"
                            android:background="@drawable/border_background_reverse"
                            android:src="@mipmap/profile_image_default"
                            android:scaleType="centerCrop"/>

                        <Button
                            android:id="@+id/ap_buttonUpdate"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_gravity = "center_horizontal"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            style="@style/profile_button"
                            android:text="@string/edit_profile"
                            android:onClick="editProfile"/>
                        <!--End Layout for Prof Pic & Edit Button-->
                    </LinearLayout>

                    <!--Vertical Divider Line-->
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/background" />

                    <!--Lin Layout for User Details-->
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:weightSum="14"
                        style = "@style/profile_details">

                        <!--Row: User Name-->
                        <TextView
                            android:id="@+id/ap_user_name"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            style = "@style/profileText1"
                            android:hint="@string/user_name"/>

                        <!--Row: Points-->
                        <TextView
                            android:id="@+id/ap_user_points"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            style = "@style/profileText2"
                            android:hint="@string/user_points"/>

                        <!--Row: Email-->
                        <TextView
                            android:id="@+id/ap_user_email"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            style = "@style/profileText3"
                            android:hint="@string/user_email"/>

                        <!--Row: Course-->
                        <TextView
                            android:id="@+id/ap_user_course"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            style = "@style/profileText3"
                            android:hint="@string/user_course"/>

                        <!--Row: Total Events-->
                        <TextView
                            android:id="@+id/ap_user_events"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            style = "@style/profileText3"
                            android:hint="@string/user_events"/>

                        <!--Row: Rating-->
                        <TextView
                            android:id="@+id/ap_user_rating"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            style = "@style/profileText3"
                            android:hint="@string/user_rating"/>

                        <!--Lin Layout for User Details-->
                    </LinearLayout>

                    <!--Lin Layout for Profile Information Row 1                        -->
                </LinearLayout>

                <!--Horizontal Divider Line-->
                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="1dp"
                    android:background="@color/background" />

                <!--Row: Biography-->
                <TextView
                    android:id="@+id/ap_user_about"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textColor="@color/colorText"
                    android:layout_gravity="center_vertical"
                    android:text="@string/about_me"/>

                <!--Horizontal Divider Line-->
                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="1dp"
                    android:background="@color/background" />

                <!--END Layout for All Profile Information-->
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />

            <!--************ ACTIVITIES SUMMARY ***************-->

            <!--Lin Layout for Activities Fragments-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <fragment
                    android:id="@+id/ap_activity_fragment"
                    android:name="com.example.saorla.ucdfood.FragmentActivityStats"
                    tools:layout="@layout/fragment_view_activity_stats"
                    android:layout_width="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="match_parent"/>

                <!--End Layout for Activities Fragments-->
            </LinearLayout>


            <!--************ DIVIDE LINE ***************-->
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />



            <!--************ EVENTS SUMMARY ***************-->

            <!--Lin Layout for EVENTS Fragments-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <fragment
                    android:id="@+id/ap_events_fragment"
                    android:name="com.example.saorla.ucdfood.FragmentEventsStats"
                    tools:layout="@layout/fragment_view_events_stats"
                    android:layout_width="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="match_parent"/>

                <!--END Layout for EVENTS Fragments-->
            </LinearLayout>



            <!--************ DIVIDE LINE ***************-->

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />


            <!--************ REVIEWS SUMMARY ***************-->

            <!--Lin Layout for REVIEWS Fragments-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="375dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <fragment
                    android:id="@+id/ap_reviews_fragment"
                    android:name="com.example.saorla.ucdfood.FragmentReviewsStats"
                    tools:layout="@layout/fragment_view_reviews_stats"
                    android:layout_width="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_height="match_parent"/>

                <!--END Layout for REVIEWS Fragments-->
            </LinearLayout>


            <!--************ FINISH DIVIDE LINE ***************-->

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />

            <!--END LIN LAYOUT FOR ALL INFORMATION-->
        </LinearLayout>

    </ScrollView>
</LinearLayout>