<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background">


    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2"
        tools:context=".MainActivityFragment"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">





            <ImageButton
                android:id="@+id/aep_updateImageButton"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/camera_icon_2"
                android:onClick="updateProfilePic"
                android:scaleType="fitXY"/>

            <ImageButton
                android:id="@+id/aep_behindImageButton"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/prof_pic_example"
                android:onClick="updateProfilePic"
                android:alpha="0.5"
                android:scaleType="fitXY"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/aep_editUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_background_editable"
                style="@style/editableText"
                android:inputType="textCapWords"
                android:hint="@string/user_name">
                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/aep_editUserNameLabel"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="15dp"
                style="@style/nonEditText"
                android:text="@string/user_name"/>



            <EditText
                android:id="@+id/aep_editUserEmail"
                android:layout_below="@+id/aep_editUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_background_editable"
                style="@style/editableText"
                android:inputType="textEmailAddress"
                android:hint="@string/user_email">
                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/aep_editUserEmailLabel"
                android:layout_below="@+id/aep_editUserName"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="15dp"
                style="@style/nonEditText"
                android:text="@string/user_email"/>


            <EditText android:id="@+id/aep_editUserCourse"
                android:layout_below="@+id/aep_editUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_background_editable"
                style="@style/editableText"
                android:inputType="textCapWords|textCapSentences"
                android:hint="@string/user_course">
                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/aep_editUserCourseLabel"
                android:layout_below="@+id/aep_editUserEmail"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="15dp"
                style="@style/nonEditText"
                android:text="@string/user_course"/>


            <ImageView
                android:id="@+id/aep_insert_image"
                android:layout_below="@+id/aep_editUserCourseLabel"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/border_event"
                />

        </RelativeLayout>



    </LinearLayout>
</ScrollView>